--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>benim sayfam</title>
-</head>
-<body>
-    <div          >
-        <p>e atque amet iste? Minima, eos? Impedit, nisi libero uptatem non iure.</p>
-               </div>
-</body>
+  </head>
+  <body>
+    <div>
+      <p>
+        e atque amet iste? Minima, eos? Impedit, nisi libero uptatem non iure.
+      </p>
+    </div>
+  </body>
 </html>
